--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
+*.pdf
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
@@ -34,7 +35,10 @@ vignettes/*.pdf
 # R Environment Variables
 .Renviron
 *.DS_Store
+*.zip
+
+#ProjectTemplate folders
 data
 output
 cache
-*.zip
+cluster_scripts
